Prepare TOK v0.1.0 alpha
